# website

./: CMakeLists.txt  generate_rss.cpp
docs/: adding_meta.md  first.md
include/: about.h  blog.h  footer.h  mdreader.h  navbar.h  rss.h
posts/: post_1.md
resources/: style.css
src/: about.cpp  blog.cpp  footer.cpp  index.cpp  mdreader.cpp  navbar.cpp  rss.cpp
